--- a/.github/workflows/swift.yml
+++ b/.github/workflows/swift.yml
@@ -28,5 +28,10 @@ jobs:
       - name: brew install danger/tap/danger-swift
         run: brew install danger/tap/danger-swift
 
+      - name: Extract branch name
+        shell: bash
+        run: echo "##[set-output name=branch;]$(echo ${GITHUB_REF#refs/heads/})"
+        id: get_branch
+
       - name: Danger
         run: danger-swift pr
