--- a/.github/workflows/swift.yml
+++ b/.github/workflows/swift.yml
@@ -21,6 +21,9 @@ jobs:
 
       - name: Pod install
         run: bundle exec pod install --repo-update
+
+      - name: export
+        run: export GITHUB_TOKEN=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
         
       - name: Force select Xcode
         run: sudo xcode-select -switch /Applications/Xcode_12.4.app
@@ -36,6 +39,7 @@ jobs:
       - name: Danger
         run: danger-swift pr https://github.com/gubookone/DangerTest/pull/1 --failOnErrors --no-publish-check
 
+
   danger:
     runs-on: ubuntu-latest
     steps:
@@ -50,6 +54,8 @@ jobs:
           restore-keys: |
             ${{ runner.os }}-gems-
 
+      - name: Gem install bundler
+        run: gem install bundler
 
       - uses: MeilCli/danger-action@v5
         with:
@@ -58,4 +64,4 @@ jobs:
           danger_file: 'Dangerfile'
           danger_id: 'danger-pr'
         env:
-          DANGER_GITHUB_API_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          DANGER_GITHUB_API_TOKEN: ${{ secrets.ACCESS_TOKEN }}
