--- a/.github/workflows/swift.yml
+++ b/.github/workflows/swift.yml
@@ -43,4 +43,4 @@ jobs:
         run: xcodebuild -workspace dangerTest.xcworkspace -scheme dangerTest -sdk iphonesimulator -derivedDataPath Build/ -destination "platform=iOS Simulator,name=iPhone 11 Pro Max,OS=latest" -enableCodeCoverage YES test
 
       - name: Danger
-        run: danger-swift pr https://github.com/gubookone/DangerTest/pull/1 --failOnErrors --no-publish-check
+        run: danger-swift pr https://github.com/gubookone/DangerTest/pull/1 --failOnErrors 
