--- a/.github/workflows/swift.yml
+++ b/.github/workflows/swift.yml
@@ -41,8 +41,8 @@ jobs:
         run: xcodebuild -workspace dangerTest.xcworkspace -scheme dangerTest -sdk iphonesimulator -derivedDataPath Build/ -destination "platform=iOS Simulator,name=iPhone 11 Pro Max,OS=latest" -enableCodeCoverage YES test
 
       - name: export
-        run: export GITHUB_TOKEN=${{ secrets.ACCESS_TOKEN }}
+        run: export GITHUB_TOKEN=${{ secrets.GITHUB_TOKEN }}
        
       - name: Danger
-        run: danger-swift pr https://github.com/gubookone/DangerTest/pull/1 --failOnErrors
+        run: danger-swift pr https://github.com/gubookone/DangerTest/pull/1 --failOnErrors --no-publish-check
          
