--- a/.github/workflows/swift.yml
+++ b/.github/workflows/swift.yml
@@ -48,3 +48,6 @@ jobs:
          
       - name: Danger ci
         run: danger-swift ci
+        env:
+          DANGER_GITHUB_API_TOKEN: ${{ secrets.ACCESS_TOKEN }}
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
