--- a/.github/workflows/swift.yml
+++ b/.github/workflows/swift.yml
@@ -45,5 +45,5 @@ jobs:
       - name: Danger ci
         run: danger-swift ci
         env:
-          DANGER_GITHUB_API_TOKEN: ${{ secrets.ACCESS_TOKEN }}
+          # DANGER_GITHUB_API_TOKEN: ${{ secrets.ACCESS_TOKEN }}
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
