--- a/.github/workflows/swift.yml
+++ b/.github/workflows/swift.yml
@@ -42,6 +42,9 @@ jobs:
       - name: find ~ -name "*.txt"
         run: find ~ -name "result"
 
+      - name: gem install danger-slather
+        run: gem install danger-slather
+
       - name: Danger ci
         run: danger-swift ci
         env:
