--- a/.github/workflows/swift.yml
+++ b/.github/workflows/swift.yml
@@ -43,6 +43,6 @@ jobs:
         run: find ~ -name "result"
 
       - name: Danger ci
-        run: danger-swift --help
+        run: danger-swift ci
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
