--- a/.github/workflows/swift.yml
+++ b/.github/workflows/swift.yml
@@ -26,11 +26,13 @@ jobs:
       - name: Force select Xcode
         run: sudo xcode-select -switch /Applications/Xcode_12.4.app
      
-      - name: Fast
-        uses: maierj/fastlane-action@v2.0.1
-        with:
-          lane: 'custom_lane'
-
+      # - name: Fast
+      #   uses: maierj/fastlane-action@v2.0.1
+      #   with:
+      #     lane: 'custom_lane'
+      - name: Test
+        run: xcodebuild test -scheme DangerXCodeSummary-Package -derivedDataPath Build/ -enableCodeCoverage YES | XCPRETTY_JSON_FILE_OUTPUT=result.json xcpretty -f `xcpretty-json-formatter`
+        
       - name: brew install danger/tap/danger-swift
         run: brew install danger/tap/danger-swift
 
