--- a/.github/workflows/swift.yml
+++ b/.github/workflows/swift.yml
@@ -30,11 +30,16 @@ jobs:
       #   uses: maierj/fastlane-action@v2.0.1
       #   with:
       #     lane: 'custom_lane'
+
+      - name: PATH="/usr/local/bin:$PATH"
+        run: PATH="/usr/local/bin:$PATH"
+
       - name: Test
-        run: xcodebuild test -scheme DangerXCodeSummary-Package -derivedDataPath Build/ -enableCodeCoverage YES | XCPRETTY_JSON_FILE_OUTPUT=result.json xcpretty -f `xcpretty-json-formatter`
-        
+        run: xcodebuild test -scheme DangerXCodeSummary-Package -derivedDataPath Build/ -enableCodeCoverage YES | XCPRETTY_JSON_FILE_OUTPUT=result.json xcpretty -f 'xcpretty-json-formatter'
+
       - name: brew install danger/tap/danger-swift
         run: brew install danger/tap/danger-swift
+
 
       - name: Extract branch name
         shell: bash
