--- a/.github/workflows/swift.yml
+++ b/.github/workflows/swift.yml
@@ -35,7 +35,7 @@ jobs:
         run: PATH="/usr/local/bin:$PATH"
 
       - name: Test
-        run: xcodebuild test -scheme dangerTest -destination 'platform=iOS Simulator,name=iPhone 11 Pro Max'  -derivedDataPath Build/ -enableCodeCoverage YES | XCPRETTY_JSON_FILE_OUTPUT=result.json xcpretty -f 'xcpretty-json-formatter'
+        run: xcodebuild test -scheme dangerTest -destination 'platform=iOS Simulator,name=iPhone 11 Pro Max'  -derivedDataPath Build/ -enableCodeCoverage YES | xcpretty "--color" -f 'xcpretty-json-formatter' -r json-compilation-database
 
       - name: brew install danger/tap/danger-swift
         run: brew install danger/tap/danger-swift
