--- a/.github/workflows/swift.yml
+++ b/.github/workflows/swift.yml
@@ -14,6 +14,12 @@ jobs:
           fetch-depth: 0
           lfs: true
 
+      - name: ruby 2,7    
+        uses: ruby/setup-ruby@v1
+        with:
+          ruby-version: 2.7
+          bundler-cache: true
+
       - name: Bundle install
         run: |
           bundle config path vendor/bundle
