--- a/.github/workflows/swift.yml
+++ b/.github/workflows/swift.yml
@@ -32,16 +32,10 @@ jobs:
       - name: Force select Xcode
         run: sudo xcode-select -switch /Applications/Xcode_12.4.app
      
-      # - name: Fast
-      #   uses: maierj/fastlane-action@v2.0.1
-      #   with:
-      #     lane: 'custom_lane'
-
-      - name: PATH="/usr/local/bin:$PATH"
-        run: PATH="/usr/local/bin:$PATH"
-
-      - name: Test
-        run: xcodebuild -workspace dangerTest.xcworkspace -scheme dangerTest -sdk iphonesimulator -destination 'platform=iOS Simulator,name=iPhone 11 Pro Max'  -derivedDataPath Build/ -enableCodeCoverage YES clean build test  | XCPRETTY_JSON_FILE_OUTPUT=result.json xcpretty -f 'xcpretty-json-formatter'
+      - name: Fast
+        uses: maierj/fastlane-action@v2.0.1
+        with:
+          lane: 'custom_lane'
 
       - name: brew install danger/tap/danger-swift
         run: brew install danger/tap/danger-swift
