--- a/.github/workflows/swift.yml
+++ b/.github/workflows/swift.yml
@@ -1,6 +1,14 @@
 name: Swift
 
-on: pull_request
+on: 
+  pull_request:
+    
+  workflow_dispatch:
+    inputs:
+      logLevel:
+        description: 'Log level'     
+        required: true
+        default: '1.1.0'
 
 jobs:
   build:
