--- a/.github/workflows/swift.yml
+++ b/.github/workflows/swift.yml
@@ -14,6 +14,8 @@ jobs:
   build:
     runs-on: macos-latest
     timeout-minutes: 30
+    env:
+      PR_NUMBER: ${{ github.event.pull_request.number }}
 
     steps:
       - name: Checkout
