--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -37,3 +37,7 @@ jobs:
         uses: maierj/fastlane-action@v2.0.1
         with:
           lane: 'custom_lane'
+
+      - name: Upload Code Coverage
+        run: |
+          bash <(curl -s https://codecov.io/bash)
