--- a/.github/workflows/swift.yml
+++ b/.github/workflows/swift.yml
@@ -42,4 +42,4 @@ jobs:
 
       - name: Upload Code Coverage
         run: |
-          bash <(curl -s https://codecov.io/bash)
+          bash <(curl -s https://codecov.io/bash) -t 779bfd33-b31e-4cb9-9334-249be2bf2d75
