--- a/codecov.yml
+++ b/codecov.yml
@@ -7,7 +7,7 @@ codecov:
 coverage:
   precision: 2
   round: down
-  range: 80...90
+  range: 50...100
   status:
     # Learn more at http://docs.codecov.io/docs/codecov-yaml
     project:
@@ -17,4 +17,7 @@ coverage:
         threshold: 0.1
     patch:
       default:
-        enabled: off
+        enabled: yes
+    changes: 
+      default:
+        enabled: yes
